ui(dashboard): adjust default displayed values for charts to avoid too high values

--- a/apps/dashboard/style.css
+++ b/apps/dashboard/style.css
@@ -85,6 +85,7 @@ button.secondary {
   flex: 0 0 100px;
   color: white;
   font-weight: normal;
+  margin-left: .5rem;
 }
 #charts > .chart > .chart__title > .chart__title__value-wrapper > .chart__title__unit {
   font-size: 1rem;
